mxslc/tests/data/error/bad_template_3.mxsl
float foo<T>()
{
    return 1.0 + 2.0;
}

float f = foo<T>();
